--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -159,6 +159,7 @@
                 <td>{{row.code}}</td>
                 <td>{{row.value}}</td>
                 <td>{{row.note}}</td>
+                <td>{{row.extra}}</td>
             </tr>
         </tbody>
     </table>
