--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -55,11 +55,32 @@
     </ul>
   </div>
     <ul class="nav">
-        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
-            <a class="nav-link" [routerLink]="[menuItem.path]">
-                <i class="material-icons">{{menuItem.icon}}</i>
-                <p>{{menuItem.title}}</p>
-            </a>
+  <li *ngFor="let menuItem of menuItems">
+    <!-- Nếu không có submenu -->
+    <ng-container *ngIf="!menuItem.children">
+      <a [routerLink]="[menuItem.path]" routerLinkActive="active">
+        <i class="material-icons">{{menuItem.icon}}</i>
+        <p>{{menuItem.title}}</p>
+      </a>
+    </ng-container>
+    <!-- Nếu có submenu -->
+    <ng-container *ngIf="menuItem.children">
+      <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
+        <i class="material-icons">{{menuItem.icon}}</i>
+        <p>
+          {{menuItem.title}}
+          <b class="caret"></b>
+        </p>
+      </a>
+      <ul class="nav" *ngIf="menuItem.expanded">
+        <li *ngFor="let child of menuItem.children">
+          <a [routerLink]="[child.path]" routerLinkActive="active">
+            <i class="material-icons">{{child.icon}}</i>
+            <p>{{child.title}}</p>
+          </a>
         </li>
-    </ul>
+      </ul>
+    </ng-container>
+  </li>
+</ul>
 </div>
