--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,86 +1,35 @@
 <div class="logo">
-    <a href="https://www.airspeedllc.com/" class="simple-text">
-        <div class="logo-img">
-            <img src="/assets/img/logo.png"/>
-        </div>
-        AIRSPEED WH
-    </a>
+  <a href="https://www.airspeedllc.com/" class="simple-text logo-mini">
+    <div class="logo-img">
+      <img src="/assets/img/logo.png" />
+    </div>
+    AIRSPEED WH
+  </a>
 </div>
 <div class="sidebar-wrapper">
-  <div *ngIf="isMobileMenu()">
-    <form class="navbar-form">
-      <span class="bmd-form-group">
-        <div class="input-group no-border">
-          <input type="text" value="" class="form-control" placeholder="Search...">
-          <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
-            <i class="material-icons">search</i>
-            <div class="ripple-container"></div>
-          </button>
-        </div>
-      </span>
-    </form>
-    <ul class="nav navbar-nav nav-mobile-menu">
-        <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">
-                <i class="material-icons">dashboard</i>
-                <p>
-                    <span class="d-lg-none d-md-block">Stats</span>
-                </p>
+  <ul class="nav">
+    <li *ngFor="let menuItem of menuItems">
+      <ng-container *ngIf="!menuItem.children">
+        <a [routerLink]="[menuItem.path]" routerLinkActive="active">
+          <i class="material-icons">{{menuItem.icon}}</i>
+          <span>{{menuItem.title}}</span>
+        </a>
+      </ng-container>
+      <ng-container *ngIf="menuItem.children">
+        <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
+          <i class="material-icons">{{menuItem.icon}}</i>
+          <span>{{menuItem.title}}</span>
+          <i class="material-icons expand-icon">{{menuItem.expanded ? 'expand_less' : 'expand_more'}}</i>
+        </a>
+        <ul class="nav sub-menu" *ngIf="menuItem.expanded">
+          <li *ngFor="let child of menuItem.children">
+            <a [routerLink]="[child.path]" routerLinkActive="active">
+              <i class="material-icons">{{child.icon}}</i>
+              <span>{{child.title}}</span>
             </a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="material-icons">notifications</i>
-                <span class="notification">5</span>
-                <p>
-                    <span class="d-lg-none d-md-block">Some Actions</span>
-                </p>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                <a class="dropdown-item" href="#">Another Notification</a>
-                <a class="dropdown-item" href="#">Another One</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">
-                <i class="material-icons">person</i>
-                <p>
-                    <span class="d-lg-none d-md-block">Account</span>
-                </p>
-            </a>
-        </li>
-    </ul>
-  </div>
-    <ul class="nav">
-  <li *ngFor="let menuItem of menuItems">
-    <!-- Nếu không có submenu -->
-    <ng-container *ngIf="!menuItem.children">
-      <a [routerLink]="[menuItem.path]" routerLinkActive="active">
-        <i class="material-icons">{{menuItem.icon}}</i>
-        <p>{{menuItem.title}}</p>
-      </a>
-    </ng-container>
-    <!-- Nếu có submenu -->
-    <ng-container *ngIf="menuItem.children">
-      <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
-        <i class="material-icons">{{menuItem.icon}}</i>
-        <p>
-          {{menuItem.title}}
-          <b class="caret"></b>
-        </p>
-      </a>
-      <ul class="nav" *ngIf="menuItem.expanded">
-        <li *ngFor="let child of menuItem.children">
-          <a [routerLink]="[child.path]" routerLinkActive="active">
-            <i class="material-icons">{{child.icon}}</i>
-            <p>{{child.title}}</p>
-          </a>
-        </li>
-      </ul>
-    </ng-container>
-  </li>
-</ul>
+          </li>
+        </ul>
+      </ng-container>
+    </li>
+  </ul>
 </div>
