--- a/src/app/pages/work-order-status/work-order-status.component.scss
+++ b/src/app/pages/work-order-status/work-order-status.component.scss
@@ -244,3 +244,13 @@ button:active {
 .edit-sheet-btn:hover {
   background: #1565c0;
 }
+
+.edit-sheet-wrapper {
+  text-align: left;
+  margin-bottom: 12px;
+}
+
+.filter-label {
+  font-weight: 500;
+  color: #000;
+}
