--- a/src/app/pages/work-order-status/work-order-status.component.html
+++ b/src/app/pages/work-order-status/work-order-status.component.html
@@ -1,83 +1,50 @@
 <div class="workorder-container">
   <h2 class="wo-title">Work Order Status</h2>
-
-  <!-- Nút mở Google Sheet -->
-  <button class="edit-sheet-btn" (click)="openGoogleSheet()">
-    <span style="display:flex;align-items:center;">
-      <i class="material-icons" style="font-size:18px;margin-right:4px;">edit</i>
-      Edit on Google Sheet
-    </span>
-  </button>
-
-  <!-- Dropdown filter -->
+  <div class="edit-sheet-wrapper">
+    <button class="edit-sheet-btn" (click)="openGoogleSheet()">
+      <span style="display:flex;align-items:center;">
+        <i class="material-icons" style="font-size:18px;margin-right:4px;">edit</i>
+        Edit on Google Sheet
+      </span>
+    </button>
+  </div>
   <div style="margin-bottom: 16px;">
-    <label style="font-weight:500;">Y:</label>
+    <label class="filter-label">Y:</label>
     <select [(ngModel)]="selectedYear" (change)="filterData()" style="margin-right:10px;">
       <option value="">-- Tất cả --</option>
       <option *ngFor="let y of years" [value]="y">{{y}}</option>
     </select>
-    <label style="font-weight:500;">M:</label>
+    <label class="filter-label">M:</label>
     <select [(ngModel)]="selectedMonth" (change)="filterData()">
       <option value="">-- Tất cả --</option>
       <option *ngFor="let m of months" [value]="m">{{m}}</option>
     </select>
   </div>
-
-  <!-- Đăng nhập -->
-  <div *ngIf="!isLoggedIn" class="login-box">
-    <input placeholder="Account" [(ngModel)]="username" />
-    <input placeholder="Password" type="password" [(ngModel)]="password" />
-    <button (click)="login()">Login</button>
-    <div *ngIf="loginError" style="color: red;">{{loginError}}</div>
-  </div>
-
-  <!-- Đã đăng nhập: Cho sửa -->
-  <div *ngIf="isLoggedIn">
-    <table *ngIf="workOrders.length > 0" class="wo-table">
-      <thead>
-        <tr>
-          <th *ngFor="let col of columns" [class.sticky]="col === 'Work Order'">{{col}}</th>
-          <th class="actions-col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let row of workOrders; let i=index" [class.odd]="i%2===0" [class.even]="i%2===1">
-          <td *ngFor="let col of columns" [class.sticky]="col === 'Work Order'">
-            <ng-container *ngIf="editIndex === i; else viewOnly">
-              <input [(ngModel)]="workOrders[i][col]" class="wo-input" (keydown.enter)="saveRow(i)" />
-            </ng-container>
-            <ng-template #viewOnly>
-              {{row[col]}}
-            </ng-template>
-          </td>
-          <td class="actions-col">
-            <button *ngIf="editIndex !== i" (click)="editIndex = i">Edit</button>
-            <button *ngIf="editIndex === i" (click)="saveRow(i)">Save</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <!-- Chưa đăng nhập: Chỉ xem -->
-  <div *ngIf="!isLoggedIn && workOrders.length > 0">
-    <table class="wo-table">
-      <thead>
-        <tr>
-          <th *ngFor="let col of columns" [class.sticky]="col === 'Work Order'">{{col}}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let row of workOrders; let i=index" [class.odd]="i%2===0" [class.even]="i%2===1">
-          <td *ngFor="let col of columns" [class.sticky]="col === 'Work Order'">
+  <!-- ... phần còn lại ... -->
+  <table *ngIf="workOrders.length > 0" class="wo-table">
+    <thead>
+      <tr>
+        <th *ngFor="let col of columns" [class.sticky]="isWorkOrder(col)">{{col}}</th>
+        <th class="actions-col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let row of workOrders; let i=index">
+        <td *ngFor="let col of columns" [class.sticky]="isWorkOrder(col)">
+          <ng-container *ngIf="editIndex === i; else viewOnly">
+            <input [(ngModel)]="workOrders[i][col]" class="wo-input" (keydown.enter)="saveRow(i)" (blur)="saveRow(i)" />
+          </ng-container>
+          <ng-template #viewOnly>
             {{row[col]}}
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <div style="margin-top:8px; color: #888;">Đăng nhập để chỉnh sửa dữ liệu!</div>
-  </div>
-
+          </ng-template>
+        </td>
+        <td class="actions-col">
+          <button *ngIf="editIndex !== i" (click)="editIndex = i">Edit</button>
+          <button *ngIf="editIndex === i" (click)="saveRow(i)">Save</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <div *ngIf="loading">Loading...</div>
   <div *ngIf="errorMsg">{{errorMsg}}</div>
 </div>
