--- a/src/app/pages/work-order-status/work-order-status.component.html
+++ b/src/app/pages/work-order-status/work-order-status.component.html
@@ -12,14 +12,14 @@
   </div>
 
   <!-- Dropdown filter -->
-  <div style="margin-bottom: 16px;">
-    <label class="filter-label" style="color: black;">Y:</label>
-    <select [(ngModel)]="selectedYear" (change)="filterData()" style="margin-right:10px; text-align:center;">
+  <div style="margin-bottom: 16px; text-align:center;">
+    <label class="filter-label" style="color:#222;">Y:</label>
+    <select [(ngModel)]="selectedYear" (change)="filterData()" style="margin-right:14px; text-align:center; min-width:72px;">
       <option value="">-- Tất cả --</option>
       <option *ngFor="let y of years" [value]="y">{{y}}</option>
     </select>
-    <label class="filter-label" style="color: black;">M:</label>
-    <select [(ngModel)]="selectedMonth" (change)="filterData()" style="text-align:center;">
+    <label class="filter-label" style="color:#222;">M:</label>
+    <select [(ngModel)]="selectedMonth" (change)="filterData()" style="min-width:60px; text-align:center;">
       <option value="">-- Tất cả --</option>
       <option *ngFor="let m of months" [value]="m">{{m}}</option>
     </select>
@@ -35,48 +35,62 @@
 
   <!-- Đã đăng nhập: Cho sửa -->
   <div *ngIf="isLoggedIn">
-    <table *ngIf="workOrders.length > 0" class="wo-table">
-      <thead>
-        <tr>
-          <th *ngFor="let col of columns" [class.sticky]="isWorkOrder(col)">{{col}}</th>
-          <th class="actions-col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let row of workOrders; let i=index" [class.odd]="i%2===0" [class.even]="i%2===1">
-          <td *ngFor="let col of columns" [class.sticky]="isWorkOrder(col)">
-            <ng-container *ngIf="editIndex === i; else viewOnly">
-              <input [(ngModel)]="workOrders[i][col]" class="wo-input" (keydown.enter)="saveRow(i)" (blur)="saveRow(i)" />
-            </ng-container>
-            <ng-template #viewOnly>
-              {{row[col]}}
-            </ng-template>
-          </td>
-          <td class="actions-col">
-            <button *ngIf="editIndex !== i" (click)="editIndex = i">Edit</button>
-            <button *ngIf="editIndex === i" (click)="saveRow(i)">Save</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div style="overflow-x:auto;">
+      <table *ngIf="workOrders.length > 0" class="wo-table">
+        <thead>
+          <tr>
+            <th *ngFor="let col of columns; let idx = index"
+                [class.sticky-col]="isWorkOrder(col)"
+                [class.header]="true">
+              {{col}}
+            </th>
+            <th class="actions-col header">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let row of workOrders; let i=index"
+              [class.odd]="i%2===0"
+              [class.even]="i%2===1">
+            <td *ngFor="let col of columns"
+                [class.sticky-col]="isWorkOrder(col)">
+              <ng-container *ngIf="editIndex === i; else viewOnly">
+                <input [(ngModel)]="workOrders[i][col]" class="wo-input" (keydown.enter)="saveRow(i)" (blur)="saveRow(i)" />
+              </ng-container>
+              <ng-template #viewOnly>
+                {{row[col]}}
+              </ng-template>
+            </td>
+            <td class="actions-col">
+              <button *ngIf="editIndex !== i" (click)="editIndex = i">Edit</button>
+              <button *ngIf="editIndex === i" (click)="saveRow(i)">Save</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 
   <!-- Chưa đăng nhập: Chỉ xem -->
   <div *ngIf="!isLoggedIn && workOrders.length > 0">
-    <table class="wo-table">
-      <thead>
-        <tr>
-          <th *ngFor="let col of columns" [class.sticky]="isWorkOrder(col)">{{col}}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let row of workOrders; let i=index" [class.odd]="i%2===0" [class.even]="i%2===1">
-          <td *ngFor="let col of columns" [class.sticky]="isWorkOrder(col)">
-            {{row[col]}}
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div style="overflow-x:auto;">
+      <table class="wo-table">
+        <thead>
+          <tr>
+            <th *ngFor="let col of columns" [class.sticky-col]="isWorkOrder(col)" class="header">{{col}}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let row of workOrders; let i=index"
+              [class.odd]="i%2===0"
+              [class.even]="i%2===1">
+            <td *ngFor="let col of columns"
+                [class.sticky-col]="isWorkOrder(col)">
+              {{row[col]}}
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <div style="margin-top:8px; color: #888;">Đăng nhập để chỉnh sửa dữ liệu!</div>
   </div>
 
