--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -162,10 +162,10 @@
                   </thead>
                   <tbody>
                     <tr *ngFor="let row of workOrderStatus">
-                      <td>{{ row.date }}</td>
-                      <td>{{ row.done }}</td>
-                      <td>{{ row.awaiting }}</td>
-                      <td>{{ row.delay }}</td>
+                      <td>{{ row.code }}</td>
+                      <td>{{ row.value }}</td>
+                      <td>{{ row.note }}</td>
+                      <td>{{ row.extra }}</td>
                     </tr>
                   </tbody>
                 </table>
