--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -79,7 +79,7 @@ tbody td, thead th {
 }
 .custom-card-title {
   margin: 0;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 700;
   letter-spacing: 0.2px;
 }
@@ -101,4 +101,7 @@ tbody td, thead th {
 .custom-card-header-purple .custom-card-title {
   color: #111 !important;
   font-weight: bold !important;
+}
+.custom-card-header-purple .custom-card-desc {
+  color: #111 !important;
 }
