--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,22 +1,1 @@
-.layout-grid {
-  display: grid;
-  grid-template-columns: repeat(6, 44px);
-  grid-gap: 6px;
-  margin: 30px 0;
-}
-.location-cell {
-  width: 44px; height: 44px;
-  background: #ececec;
-  border: 1px solid #bbb;
-  text-align: center;
-  line-height: 44px;
-  border-radius: 7px;
-  transition: background 0.2s;
-  font-weight: 500;
-}
-.location-cell.highlight {
-  background: #2196f3;
-  color: #fff;
-  font-weight: bold;
-  box-shadow: 0 0 6px #2196f3bb;
-}
+/* file bắt buộc để Angular build, dù bạn không xài layout cũng phải có */
