--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -144,6 +144,7 @@
                   <th>Date</th>
                   <th>Done</th>
                   <th>Awaiting Picking</th>
+                  <th>Ready (kiểm)</th>
                   <th>Delay</th>
                 </tr>
               </thead>
@@ -152,6 +153,7 @@
                   <td>{{ row.code }}</td>
                   <td>{{ row.value }}</td>
                   <td>{{ row.note }}</td>
+                  <td>{{ row.ready }}</td>
                   <td>{{ row.extra }}</td>
                 </tr>
               </tbody>
