--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -144,7 +144,7 @@
                   <th>Date</th>
                   <th>Done</th>
                   <th>Awaiting Picking</th>
-                  <th>Ready (kiểm)</th>
+                  <th>Ready</th>
                   <th>Delay</th>
                 </tr>
               </thead>
