--- a/src/app/maps/maps.component.css
+++ b/src/app/maps/maps.component.css
@@ -55,3 +55,17 @@
 .example-full-width {
     width: 100%;
 }
+
+.svg-container {
+  margin-top: 20px;
+  width: 100%;
+  height: 600px; /* You can adjust this height */
+  overflow: auto; 
+  border: 1px solid #eee;
+  padding: 5px;
+}
+
+.svg-container ::ng-deep svg {
+  width: 100%;
+  height: auto;
+}
